src/blocks/container/style.scss
.wp-block-uagb-container {
	display: flex;
	position: relative;
	box-sizing: border-box;
	z-index: 2;
	transition-property: box-shadow;
	transition-duration: 0.2s;
	transition-timing-function: ease;

	&.uagb-is-root-container {
		margin-left: auto;
		margin-right: auto;
	}

	&.alignfull.uagb-is-root-container .uagb-container-inner-blocks-wrap {
		display: flex;
		position: relative;
		box-sizing: border-box;
		margin-left: auto !important;
		margin-right: auto !important;
		z-index: 2;
	}

	& > *:not(.uagb-container__shape) {
		z-index: 2;
	}

	// Background Video CSS Start.
	.uagb-container__video-wrap {
		height: 100%;
		width: 100%;
		top: 0;
		left: 0;
		position: absolute;
		overflow: hidden;
		z-index: 0;
		-webkit-transition: opacity 1s;
		-o-transition: opacity 1s;
		transition: opacity 1s;

		video {
			max-width: 100%;
			width: 100%;
			height: 100%;
			margin: 0;
			line-height: 1;
			border: none;
			display: inline-block;
			vertical-align: baseline;
			-o-object-fit: cover;
			object-fit: cover;
			background-size: cover;
		}
	}

	// Background Video CSS End.
}

body .wp-block-uagb-container > .uagb-container-inner-blocks-wrap > *:not(.wp-block-uagb-container):not(.wp-block-uagb-column):not(.wp-block-uagb-container):not(.wp-block-uagb-section):not(.uagb-container__shape):not(.uagb-container__video-wrap),
body .wp-block-uagb-container > .uagb-container-inner-blocks-wrap,
body .wp-block-uagb-container > *:not(.wp-block-uagb-container):not(.wp-block-uagb-column):not(.wp-block-uagb-container):not(.wp-block-uagb-section):not(.uagb-container__shape):not(.uagb-container__video-wrap):not(.wp-block-uagb-image) {
	min-width: unset !important;
	width: 100%;
}

// Shape Divider CSS Start.
.uagb-container__shape {
	overflow: hidden;
	position: absolute;
	left: 0;
	width: 100%;
	line-height: 0;
	direction: ltr;
	z-index: 1;
}

.uagb-container__shape-top {
	top: -3px;
}

.uagb-container__shape-bottom {
	bottom: -3px;
}

.uagb-container__shape.uagb-container__invert.uagb-container__shape-bottom,
.uagb-container__shape.uagb-container__invert.uagb-container__shape-top {
	-webkit-transform: rotate(180deg);
	-ms-transform: rotate(180deg);
	transform: rotate(180deg);
}

.uagb-container__shape.uagb-container__shape-flip svg {
	transform: translateX(-50%) rotateY(180deg);
}

.uagb-container__shape svg {
	display: block;
	width: -webkit-calc(100% + 1.3px);
	width: calc(100% + 1.3px);
	position: relative;
	left: 50%;
	-webkit-transform: translateX(-50%);
	-ms-transform: translateX(-50%);
	transform: translateX(-50%);
}

.uagb-container__shape .uagb-container__shape-fill {
	-webkit-transform-origin: center;
	-ms-transform-origin: center;
	transform-origin: center;
	-webkit-transform: rotateY(0deg);
	transform: rotateY(0deg);
}

.uagb-container__shape.uagb-container__shape-above-content {
	z-index: 9;
	pointer-events: none;
}
// Shape Divider CSS End.

